[package]
name = "cryptopals"
version = "0.1.0"
authors = ["Greg Berns-Leone <gbernsleone@narrativescience.com>"]
edition = "2018"

[lib]
name = "cryptopals"
path = "src/lib.rs"
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.3"